--- a/HappyRun/app/src/main/res/layout/title.xml
+++ b/HappyRun/app/src/main/res/layout/title.xml
@@ -6,7 +6,6 @@
     android:layout_height="40dp">
 <ImageView
     android:layout_centerVertical="true"
-    android:src="@mipmap/ic_launcher"
     android:layout_alignParentLeft="true"
     android:layout_width="30dp"
     android:layout_height="30dp"
@@ -18,13 +17,12 @@
         android:textSize="24dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView" />
+        android:id="@+id/textViewtitle" />
     <ImageView
-        android:background="@mipmap/ic_launcher"
         android:layout_marginRight="20dp"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:id="@+id/imageView" />
+        android:id="@+id/imageViewtitle" />
 </RelativeLayout>
